# colav-interfaces

./: CMakeLists.txt  README.md  package.xml
action/: MissionExecutor.action
colav_interfaces/msg/: Acceleration2D.msg  PredictedTrajectory.msg  Tag.msg
colav_interfaces/msg/controller_feedback/: ControlMode.msg  ControlStatus.msg
colav_interfaces/msg/hybrid_automaton/agent_update/: AgentConfig.msg
colav_interfaces/msg/hybrid_automaton/obstacles_update/: DynamicObstacleConfig.msg  ObstaclesConfig.msg
colav_interfaces/msg/mission/: MissionRequest.msg
colav_interfaces/msg/unsafe_set/: UnsafeSet.msg
colav_interfaces/srv/hybrid_automaton/: StartHybridAutomaton.srv
msg/: DynamicObstacle2D.msg  Obstacles2D.msg  StaticObstacle2D.msg  Velocity2D.msg
msg/controller_feedback/: CmdVelYaw.msg  ControlStatus.msg  ControllerFeedback.msg
msg/hybrid_automaton/agent_update/: AgentConfig.msg
msg/hybrid_automaton/obstacles_update/: ObstaclesConfig.msg  StaticObstacleConfig.msg
msg/mission/: Mission.msg
msg/mission/vessel/: Vessel.msg  VesselConstraints.msg  VesselGeometry.msg
srv/: MissionMap.srv  SubMissionMap.srv
srv/unsafe/: UnsafeRegion.srv
